[tool.poetry]
name = "memlim-playground"
version = "0.1.0"
description = ""
authors = ["Jan Vanbuel <janvanbuel@hotmail.com>"]
readme = "README.md"
packages = [{include = "memlim_playground"}]

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^12.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
